--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  background-color: #111111;
+  padding: 2% 10% 5% 10%;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +16,50 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.burger {
+  padding-top: 1rem;
+}
+
+
+.burgers {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 1200px;
+  gap: 2rem;
+}
+
+
+.burger-img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+h1 {
+  color: #fff;
+  font-size: 48px;
+}
+
+h3 {
+  color: #fff;
+  font-size: 32px;
+  margin-bottom: 0;
+  margin-top: 1rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+p {
+  color: #fff;
 }
